[MODORDERS-1036] - Minor improvements for naming